# ipfs_datasets_py

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  =0.13.1  =0.20.0  =6.30.1  ACCELERATE_FINAL_VERIFICATION.md  ACCELERATE_INTEGRATION_COMPLETE.md  AI_AGENT_PR_INTEGRATION.md  AI_DATASET_BUILDER_GUIDE.md  ANYIO_MIGRATION_REPORT.md  ARCHITECTURE_REVIEW_LOGIC_COMPLETE.md  ARCHITECTURE_REVIEW_TDFOL_EXTERNAL_PROVERS.md  ARCHITECTURE_VALIDATION_QUICK_START.md  ARCHIVE_CHECK_IMPLEMENTATION.md  AUTOFIX_README.md  AUTOMATED_PR_REVIEW_GUIDE.md  AUTO_HEALING_IMPLEMENTATION.md  AUTO_HEALING_SECURITY.md  BATCH_325_LIFECYCLE_HOOKS_SUMMARY.md  CACHING_IMPLEMENTATION_SUMMARY.md  CASELAW_DASHBOARD_GUIDE.md  CASELAW_GRAPHRAG_IMPLEMENTATION.md  CHANGELOG.md  CICD_SETUP_SUMMARY.md  CLAUDE.md  CLAUDE.md.backup  CLI_QUICK_START.md  CLI_README.md  CLI_TESTING_REPORT.md  CLI_TOOLS_IMPLEMENTATION_SUMMARY.md  CLI_TOOL_MERGE.md  COMPLETE_NEUROSYMBOLIC_SYSTEM.md  COMPREHENSIVE_SESSION_STATUS.md  COMPREHENSIVE_VALIDATION_GUIDE.md  CONTRIBUTING.md  COPILOT_CLI_INTEGRATION.md  COPILOT_INVOCATION_GUIDE.md  (+516 more)
ipfs_datasets_py/processors/groth16_backend/: Cargo.toml  IMPROVEMENT_TODO.md  RUST_SETUP.md  WIRE_FORMAT.md  build.sh
ipfs_datasets_py/processors/groth16_backend/contracts/: GrothVerifier.sol  VKHashRegistry.sol
ipfs_datasets_py/processors/groth16_backend/schemas/: error_envelope_v1.schema.json  proof_v1.schema.json  witness_v1.schema.json
ipfs_datasets_py/processors/groth16_backend/src/: circuit.rs  domain.rs  lib.rs  main.rs  prover.rs  setup.rs  verifier.rs
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/: .gitignore  .pre-commit-config.yaml  __init__.py  main.py  pyproject.toml  requirements.txt  start.bat  test.bat
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/configs/: configs.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/configs/file_paths_manager/: file_path.py  file_path_and_metadata.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/configs/playwright/: browser_launch_configs.py  proxy_launch_configs.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/configs/resource/: api_connection.py  resource.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/configs/types/: valid_path.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/converter_system/conversion_pipeline/: define_function.py  file_unit.py  monad_file_conversion_pipeline.py  monad_file_converter.py  monad_file_loader.py  monad_file_writer.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/converter_system/conversion_pipeline/functions/: core.py  optimize.py  pipeline.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/converter_system/core_error_manager/: core_error_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/converter_system/core_resource_manager/: core_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/converter_system/file_path_queue/: file_path_queue.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/: external_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/config_parser/: config_parser.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/config_parser/resources/: _check_if_there_are_duplicate_keys_in_this_dictionary.py  _normalize_dict_keys_and_values.py  _print_configs_on_startup.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/file_paths_manager/: file_paths_manager.py  mime_type.py  supported_mime_types.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/non_system_resource_manager/: api_connection.py  api_monitor.py  network_bandwidth_monitor.py  non_system_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/non_system_resource_manager/resources/: psutil.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/external_interface/system_resource_manager/: README.md  hardware_monitor.py  resource_config.py  system_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/logger/: _handle_uncaught_exception.py  logger.py  make_json_from_log_file.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/pools/non_system_resources/core_functions_pool/: core_functions_pool.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/pools/pool_health_monitor/: pool_health_monitor.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/pools/pool_resource_manager/: pool_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/pools/system_resources/: system_resources_pool_template.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/test/test_pools/: test_pool_resource_manager.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/test/test_pydantic_models/: test_resource.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/utils/common/: anyio_queues.py  asyncio_coroutine.py  logger.py  make_merkle_tree.py  next_step.py  pipeline.py  stopwatch.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/utils/converter_system/: run_in_parallel_with_concurrency_limiter.py  run_in_thread_pool.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/utils/errors/: error_on_wrong_value.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/utils/file_paths_manager/: md5_checksum.py
ipfs_datasets_py/processors/multimedia/convert_to_txt_based_on_mime_type/utils/main/: run_with_argparse.py
(+12086 files in other folders)
