[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_datasets_py"
version = "0.2.0"
description = "IPFS-native decentralized AI data platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

# Core dependencies — numpy is always installed automatically.
# Version bounds mirror requirements.txt to keep all installation paths
# (pip install ., pip install -r requirements.txt, pip install ipfs_datasets_py)
# consistent. The python_version markers future-proof the bounds: numpy 1.x is
# used for Python < 3.14 and numpy 2.x for Python >= 3.14 (even though only
# Python 3.12+ is currently supported, keeping both lines ensures the dep spec
# remains valid when Python 3.14 support is added).
dependencies = [
    "numpy>=1.21.0,<2.0.0; python_version < '3.14'",
    "numpy>=2.0.0; python_version >= '3.14'",
    "requests>=2.25.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "ddgs>=9.11.2",
    "google-api-python-client>=2.192.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.40.0",
    "cfscrape>=2.1.1; python_version < '3.12'",
    "brave-search==0.1.8",
    "nltk>=3.8.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "pillow>=10.2.0,<11.0.0",
    "PyPDF2>=3.0.0",
    "pypdf>=5.0.0",
    "pytesseract>=0.3.13",
    "striprtf>=0.0.29",
    "tiktoken>=0.6.0",
    "pysbd",
    "markitdown>=0.1.0",
    "python-docx>=1.1.2",
    "surya-ocr>=0.14.6; platform_system != 'Windows' and python_version < '3.14'",
]

[project.optional-dependencies]
# IPLD / CAR format extras
ipld = [
    "libipld>=3.3.2",       # Rust-backed DAG-CBOR + CAR decode (primary)
    "ipld-car>=0.0.1",      # Pure-Python CAR encode+decode (required for save)
    "ipld-dag-pb>=0.0.1",   # DAG-PB codec (optional, for IPFS file-system nodes)
    "dag-cbor>=0.3.3",      # DAG-CBOR codec (required by ipld-car)
    "multiformats>=0.3.0",  # CID + multihash (required for CAR save path)
]
# Knowledge-graph extras (numpy already in base deps)
knowledge_graphs = [
    "spacy>=3.0.0",
    "networkx>=2.8.0",
    "transformers>=4.30.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.9.0",
    "rdflib>=6.0.0",
]
file_conversion = [
    "markitdown>=0.1.0",
    "aiohttp>=3.8.0",
    "playwright>=1.40.0",
    "striprtf>=0.0.29",
    "python-docx>=1.1.2",
]
vectors = [
    "sentence-transformers>=3.0.0,<6.0.0",
    "faiss-cpu>=1.7.0; platform_system == 'Windows'",
    "faiss-cpu>=1.8.0; platform_system != 'Windows'",
    "scikit-learn>=1.3.0,<2.0.0",
    "qdrant-client>=1.0.0",
    "elasticsearch>=8.0.0",
]
scraping = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "selenium>=4.15.0",
    "scrapy>=2.11.0",
    "autoscraper>=1.1.14",
    "cdx-toolkit>=0.9.37",
    "wayback>=0.4.5",
    "internetarchive>=5.5.0",
    "aiohttp>=3.8.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.2",
    "pytest-xdist>=3.8.0",
    "pytest-parallel>=0.1.1",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.0.0",
]
all = [
    "spacy>=3.0.0",
    "networkx>=2.8.0",
    "transformers>=4.30.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.9.0",
    "rdflib>=6.0.0",
    "aiohttp>=3.8.0",
    "python-docx>=1.1.2",
    "sentence-transformers>=3.0.0,<6.0.0",
    "faiss-cpu>=1.7.0; platform_system == 'Windows'",
    "faiss-cpu>=1.8.0; platform_system != 'Windows'",
    "scikit-learn>=1.3.0,<2.0.0",
    "qdrant-client>=1.0.0",
    "elasticsearch>=8.0.0",
    "selenium>=4.15.0",
    "scrapy>=2.11.0",
    "autoscraper>=1.1.14",
    "cdx-toolkit>=0.9.37",
    "wayback>=0.4.5",
    "internetarchive>=5.5.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
ipfs_datasets_py = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = [
    "ipfs_datasets_py/optimizers/graphrag/ontology_critic.py",
]
also_copy = [
    "ipfs_datasets_py/optimizers/common",
    "ipfs_datasets_py/optimizers/graphrag",
]
pytest_add_cli_args_test_selection = [
    "tests/unit/optimizers/graphrag/test_ontology_critic_dimensions.py",
    "tests/unit/optimizers/graphrag/test_ontology_critic_snapshots.py",
    "tests/unit/optimizers/graphrag/test_ontology_critic_evaluate_batch.py",
]
