[package]
name = "groth16_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-groth16 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
ark-snark = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-relations = "0.4"
ark-r1cs-std = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
rand = "0.8"

[[bin]]
name = "groth16"
path = "src/main.rs"

[lib]
name = "groth16_backend"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
