[project]
name = "convert_to_txt_based_on_mime_type"
version = "0.1.0"
authors = "Kyle Rose <kylemail1946@gmail.com>"
description = "Convert any kind of file from the web into a txt document based on its MIME type."
license = "MIT"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["main"]